# pokestar

./: .gitignore  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
docker/config/: .env.postgres.local
pokefetcher/: apifetcher.py  pokeapi.py
pokefetcher/config/: .env.local  .env.postgres.local
pokestar/: manage.py
pokestar/config/: .env.dist
pokestar/pokemons/: admin.py  factories.py  filters.py  models.py  pokeapi.py  serializers.py  tasks.py  tests.py  urls.py  views.py  viewsets.py
pokestar/pokemons/migrations/: 0001_initial.py  0002_pokemon_created_at_pokemon_updated_at_and_more.py  0003_alter_pokemonmove_power.py
pokestar/pokemons/templates/: index.html
pokestar/pokestar/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/: pokeapi.py
